	* Added a new 'kill' command to NSH that will support sending signals to
	  running NuttX tasks.

5.19 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* arch/arm/stm32/stm32_idle.c -- During idle times, the STM32 now uses the
	  WFI instruction to sleep in a reduced power mode until the next interrupt
	  occurs (Contributed by Uros Platise).      
	* NSH: 'mem' command renamed to 'free'.  Output is now more similar to the
	  Linux 'free' command.
	* NSH: Correct a redirection bug in NSH.  The following would not work; it
	  resulted in a hang after the 'cat /dev/fifo':

	    nsh> mkfile /dev/fifo
	    nsh> cd /tmp             # /tmp is a mounted RAM disk
	    nsh> cat /dev/fifo > test.txt &
	    nsh> echo "This is a test" > /dev/fifo

	  The error was caused because (1) there was a path that resulted in stdout
	  being closed (the "hang") and also (2) the 'cat' command was always outputting
	  to stdout, not to the redirected file descriptor.  Now:

	    nsh> cat test.txt
	    This is a test

	* drivers/pipes/pipe_common.c:  Driver open method eas not returning an EINTR
	  error when it received a signal.  Instead, it just re-started the wait.  This
	  makes it impossible to kill a background pipe operation from NSH.
	* include/stdint.h -- Correct some errors in conditional compilation (submitted
	  by Johannes Hampel).
	* arch/arm/lpc17xx/lp17_idle.c -- Uses the same logic as the STM32: uses the
	  WFI instruction to sleep in a reduced power mode until the next interrupt
	  occurs.
	* configs/olimex-lpc1766stk -- Added an LED encoded to indicate if the LPC1766
	  is in sleeping.
	* examples/mm  -- This is a simplified version of the "built-in" memory manager
	  test of mm/mm_test.c.  It is simplified because it does not have access to
	  the internals of the memory manager as does mm/mm_test.c, but it has the
	  advantage that it runs in the actual NuttX tasking environment (the
	  mm/mm_test.c only runs in a PC simulation environment).
